--- a/.github/workflows/SlackNotification.yml
+++ b/.github/workflows/SlackNotification.yml
@@ -24,9 +24,9 @@ jobs:
           COMMIT_COUNT=$(echo '${{ toJson(github.event.commits) }}' | grep -o '{' | wc -l)
           echo "commit_count=$COMMIT_COUNT" >> $GITHUB_OUTPUT
           {
-          echo "COMMITS<<EOF" >> $GITHUB_OUTPUT
-          git log -n ${COMMIT_COUNT} --pretty=format:"%h %s - %an" >> $GITHUB_OUTPUT
-          echo "EOF" 
+            echo "COMMITS<<EOF"
+            git log -n ${COMMIT_COUNT} --pretty=format:"%h %s - %an"
+            echo "EOF"
           } >> $GITHUB_OUTPUT
           
       # Slack 알림 전송
