--- a/.github/workflows/SlackNotification.yml
+++ b/.github/workflows/SlackNotification.yml
@@ -20,14 +20,13 @@ jobs:
           REPO_NAME="${GITHUB_REPOSITORY#*/}"
           echo "repo_name=$REPO_NAME" >> $GITHUB_OUTPUT
 
-          # 커밋 개수 계산 (jq가 없으면 grep로 대체 가능)
+           # commit_count
           COMMIT_COUNT=$(echo '${{ toJson(github.event.commits) }}' | grep -o '{' | wc -l)
           echo "commit_count=$COMMIT_COUNT" >> $GITHUB_OUTPUT
-          {
-            echo "COMMITS<<EOF"
-            git log -n ${COMMIT_COUNT} --pretty=format:"%h %s - %an"
-            echo "EOF"
-          } >> $GITHUB_OUTPUT
+          
+          # commits: 한 줄에 한 커밋
+          COMMITS=$(git log -n ${COMMIT_COUNT} --pretty=format:"%h %s - %an")
+          echo "commits=${COMMITS}" >> $GITHUB_OUTPUT
           
       # Slack 알림 전송
       - name: Send Slack Notification
