--- a/.github/workflows/SlackNotification.yml
+++ b/.github/workflows/SlackNotification.yml
@@ -35,6 +35,7 @@ jobs:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
         run: |
           BRANCH_NAME="${GITHUB_REF#refs/heads/}"
+          CLEAN_COMMITS=$(echo '${{ steps.format.outputs.commits }}' | jq -r .)
 
           JSON_PAYLOAD=$(
             echo '{
@@ -56,7 +57,7 @@ jobs:
                       "type": "section",
                       "text": {
                         "type": "mrkdwn",
-                        "text": '${{ steps.format.outputs.commits }}'
+                        "text":  "'"${CLEAN_COMMITS}"'"
                       }
                     }
                   ]
