--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,8 +1,8 @@
 asgiref==3.8.1
 Django==5.2.4
-environ==1.0
+django-environ==0.12.0
+djangorestframework==3.16.0
 psycopg==3.2.9
 psycopg2==2.9.10
 sqlparse==0.5.3
 tzdata==2025.2
-djangorestframework==3.16.0
