--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,6 +2,8 @@ asgiref==3.8.1
 Django==5.2.4
 django-environ==0.12.0
 djangorestframework==3.16.0
+numpy==2.3.1
+pgvector==0.4.1
 psycopg==3.2.9
 psycopg2==2.9.10
 sqlparse==0.5.3
