--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ distro==1.9.0
 Django==5.2.4
 django-environ==0.12.0
 djangorestframework==3.16.0
+drf-yasg==1.21.10
 gotrue==2.12.2
 h11==0.16.0
 h2==4.2.0
@@ -17,6 +18,7 @@ httpcore==1.0.9
 httpx==0.28.1
 hyperframe==6.1.0
 idna==3.10
+inflection==0.5.1
 iniconfig==2.1.0
 jiter==0.10.0
 numpy==2.3.1
@@ -34,6 +36,8 @@ PyJWT==2.10.1
 pytest==8.4.1
 pytest-mock==3.14.1
 python-dateutil==2.9.0.post0
+pytz==2025.2
+PyYAML==6.0.2
 realtime==2.5.3
 regex==2024.11.6
 requests==2.32.4
@@ -49,5 +53,6 @@ tqdm==4.67.1
 typing-inspection==0.4.1
 typing_extensions==4.14.0
 tzdata==2025.2
+uritemplate==4.2.0
 urllib3==2.5.0
 websockets==15.0.1
